--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,38 @@
 /* 
     General Styles
 */
+#cardBody {
+    display: flex;
+    align-content: start;
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+}
+
+.fa-location-dot,
+.fa-phone,
+.fa-envelope {
+    padding-right: 10px;
+}
+
+.fa-pencil {
+    float:inline-start
+}
+
+.fa-trash {
+    float: inline-end;
+}
+
+.img-fluid {
+    border-radius: 0%;
+}
+
+.cardBody {
+    align-items: flex-start;
+}
+
+.buttonIcons {
+    align-items: flex-start;
+}
